# KarkovWeekend

./: .env.example  .gitignore  Caddyfile  README.md  cookies.txt  docker-compose.prod.yml  docker-compose.yml  prompt.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  seeds.py
backend/app/api/v1/: admin.py  (+12 more)
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: __init__.py  activity.py  attendance.py  chat_message.py  chor.py  email_outbox.py  event.py  event_photo.py  expense.py  expense_category.py  family.py  invite_token.py  password_reset_token.py  pending_notification.py  pricing_rules.py  push_subscription.py  user.py
backend/app/schemas/: activity.py  attendance.py  auth.py  chat.py  event.py  expense.py  family.py  push.py  user.py
backend/app/services/: balance.py  budget.py  email.py  events_factory.py  family_io.py  notification_queue.py  notifications.py  pricing.py  push.py  scrape.py  uploads.py
backend/scripts/: README.md  seed_event.py
backend/tests/: conftest.py
backend/tests/api/: test_admin_deletes.py  test_admin_edits.py  test_attendance_activities.py  test_auth.py  test_chat.py  test_chors_delete.py  test_event_photos.py  test_events.py  test_expense_categories.py  test_expenses_budget.py  test_family_attendance.py  test_family_edits.py  test_family_io.py  test_finalize.py  test_notification_queue.py  test_push.py  test_test_email.py  test_users_children.py
backend/tests/services/: test_balance.py  test_events_factory.py  test_pricing.py  test_scrape.py
(+58 files in other folders)
