[project]
name = "karkov-weekend-backend"
version = "0.2.1"
description = "Backend for KarkovWeekend family weekend planner"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.1",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "pillow>=11.0.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "pyyaml>=6.0.3",
    "pywebpush>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:jose.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
